--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@prisma/adapter-libsql": "^7.3.0",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
